Fixed some margins on mobile

--- a/src/Components/Partners/Partners.css
+++ b/src/Components/Partners/Partners.css
@@ -59,6 +59,6 @@
 
     .partners .partners_logo {
         --partners-logo-margin: 6rem;
-        margin: 1rem 5rem 3rem 5rem;
+        margin: 7rem 5rem 7rem 5rem;
     }
 }
